--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -5,15 +5,10 @@
 
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='js/jquery.js') }}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='js/jquery.maskedinput.js') }}" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
+        <div id="successAlert" class="alert alert-success" role="alert" style="display:none;"></div>
         <div class="row">
             <div class="col-lg-9 col-md-9 col-sm-9 col-lg-offset-2 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
                 <div class="register-box text-left">
@@ -43,5 +38,7 @@
             </div>
         </div>
     </div>
+    {% include 'includes/_frameworks.html' %}
+{#    <script src="{{ url_for('static', filename='js/form_submit.js') }}"></script>#}
 </body>
 {% endblock %}
