OOP approach for all notifications

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -32,7 +32,7 @@
                         {{ wtf.form_field(form.message) }}
                     </div>
 					<!-- TODO: uncomment this when not testing with selenium -->
-{#                    {{ wtf.form_field(form.recaptcha) }}#}
+                    {{ wtf.form_field(form.recaptcha) }}
                     {{ form.submit(class="btn btn-primary") }}
                 </form>
                 </div>
